# aroma

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  _version.py  aroma.py  classification_plot.py  codecov.yml  config.yml  features.py  plotting.py  setup.cfg  setup.py  versioneer.py
.circleci/: artifact_path  config.yml
.github/: issue_template.md  pull_request_template.md
aroma/: __init__.py  _version.py  aroma.py  classification.py  features.py  io.py  mixture.py  plotting.py  utils.py
aroma/cli/: __init__.py  aroma.py  classification_plot.py  parser_utils.py
aroma/tests/: conftest.py  test_classification.py  test_features.py  test_integration.py  test_utils.py  utils.py
aroma/tests/data/: AROMAnoiseICs.csv  classification_overview.txt  classified_motion_ICs.txt  eigenvalues_percent  feature_scores.txt  melodic_FTmix  melodic_ICstats  melodic_PPCA  melodic_Tmodes
aroma/tests/data/features_test/: HFC.npy  csfFract.npy  edgeFract.npy  features.csv  max_correls.npy  mc_fmriprep.tsv  mc_fsl.txt  melodic_FTmix  melodic_mix  rp_mc_spm.txt
docs/: aroma.cli.rst  aroma.rst  conf.py
examples/: mixture_model.ipynb  run_workflow.ipynb
source/: index.rst
source/_build/doctrees/: aroma.cli.doctree  aroma.doctree  environment.pickle  index.doctree  modules.doctree
source/_build/html/: .buildinfo  aroma.cli.html  aroma.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
source/_build/html/_sources/: modules.rst.txt
